# lpbfFoam

./: Allwclean  Allwmake  thermocapillaryInterFoam.C
Make/: options
THERMORAY/: Allwclean  Allwmake  CMakeLists.txt  cuda_functions.cuh  hello.cu  test.cu
dictionaries/: radiationProperties.h
system/: controlDict
